{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 57,
  "lineage": "b07ab28e-8188-9999-6439-eabf430326d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a43e3ad237c00e77",
            "associate_with_private_ip": "10.10.1.50",
            "association_id": "eipassoc-01327c34765f5f40b",
            "domain": "vpc",
            "id": "eipalloc-0a43e3ad237c00e77",
            "instance": "i-08aee3c1e8ad88faf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a0d348787e9ee6f4",
            "private_dns": "ip-10-10-1-50.ec2.internal",
            "private_ip": "10.10.1.50",
            "public_dns": "ec2-34-198-52-160.compute-1.amazonaws.com",
            "public_ip": "34.198.52.160",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.gl-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e47415d2bcb7032f",
            "associate_with_private_ip": "10.10.1.75",
            "association_id": "eipassoc-0c37de5d55bbd5057",
            "domain": "vpc",
            "id": "eipalloc-0e47415d2bcb7032f",
            "instance": "i-0c1f9d4ec3af07c58",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e22b3e5ce385bc7",
            "private_dns": "ip-10-10-1-75.ec2.internal",
            "private_ip": "10.10.1.75",
            "public_dns": "ec2-107-20-211-187.compute-1.amazonaws.com",
            "public_ip": "107.20.211.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.workstation2-nic",
            "aws_security_group.allow_web",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f76fa70ea6833d1d",
            "associate_with_private_ip": "10.10.1.25",
            "association_id": "eipassoc-0c71b63d923e07b40",
            "domain": "vpc",
            "id": "eipalloc-0f76fa70ea6833d1d",
            "instance": "i-01adce394a24ee1f3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00a396e2925154ac5",
            "private_dns": "ip-10-10-1-25.ec2.internal",
            "private_ip": "10.10.1.25",
            "public_dns": "ec2-54-147-102-154.compute-1.amazonaws.com",
            "public_ip": "54.147.102.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.workstation1-nic",
            "aws_security_group.allow_web",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gl-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:781136206015:instance/i-08aee3c1e8ad88faf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08aee3c1e8ad88faf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a0d348787e9ee6f4"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0d348787e9ee6f4",
            "private_dns": "ip-10-10-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.50",
            "public_ip": "34.198.52.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0113469fbf2fe381f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01315f559d90d1d28",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-054305e95edf99f6d"
            ]
          },
          "dependencies": [
            "aws_network_interface.gl-server-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workstation1-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bde1eb2c18cb2abe",
            "arn": "arn:aws:ec2:us-east-1:781136206015:instance/i-01adce394a24ee1f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01adce394a24ee1f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-00a396e2925154ac5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a396e2925154ac5",
            "private_dns": "ip-10-10-1-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.25",
            "public_ip": "54.147.102.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0136d4f193d70f7bc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01315f559d90d1d28",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-054305e95edf99f6d"
            ]
          },
          "dependencies": [
            "aws_network_interface.workstation1-nic",
            "aws_security_group.allow_web",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workstation2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bde1eb2c18cb2abe",
            "arn": "arn:aws:ec2:us-east-1:781136206015:instance/i-0c1f9d4ec3af07c58",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1f9d4ec3af07c58",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05e22b3e5ce385bc7"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e22b3e5ce385bc7",
            "private_dns": "ip-10-10-1-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.75",
            "public_ip": "107.20.211.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0393e6059eb119a0f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01315f559d90d1d28",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-054305e95edf99f6d"
            ]
          },
          "dependencies": [
            "aws_network_interface.workstation2-nic",
            "aws_security_group.allow_web",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:internet-gateway/igw-0817ed942dda6b7cd",
            "id": "igw-0817ed942dda6b7cd",
            "owner_id": "781136206015",
            "vpc_id": "vpc-06fca72559cbe4f34"
          },
          "dependencies": [
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "gl-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:network-interface/eni-0a0d348787e9ee6f4",
            "attachment": [
              {
                "attachment_id": "eni-attach-08874cea58eeb2b6b",
                "device_index": 0,
                "instance": "i-08aee3c1e8ad88faf"
              }
            ],
            "id": "eni-0a0d348787e9ee6f4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:1a:21:51:c6:71",
            "owner_id": "781136206015",
            "private_ip": "10.10.1.50",
            "private_ip_list": [
              "10.10.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-054305e95edf99f6d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01315f559d90d1d28"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "workstation1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:network-interface/eni-00a396e2925154ac5",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a59981ce8d11dde9",
                "device_index": 0,
                "instance": "i-01adce394a24ee1f3"
              }
            ],
            "id": "eni-00a396e2925154ac5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:c6:b3:46:50:23",
            "owner_id": "781136206015",
            "private_ip": "10.10.1.25",
            "private_ip_list": [
              "10.10.1.25"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.25"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-054305e95edf99f6d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01315f559d90d1d28"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "workstation2-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:network-interface/eni-05e22b3e5ce385bc7",
            "attachment": [
              {
                "attachment_id": "eni-attach-0846f9e53a42cbbcb",
                "device_index": 0,
                "instance": "i-0c1f9d4ec3af07c58"
              }
            ],
            "id": "eni-05e22b3e5ce385bc7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:7b:50:25:e3:4f",
            "owner_id": "781136206015",
            "private_ip": "10.10.1.75",
            "private_ip_list": [
              "10.10.1.75"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.75"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-054305e95edf99f6d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01315f559d90d1d28"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:route-table/rtb-0ecc4c5cdf4181091",
            "id": "rtb-0ecc4c5cdf4181091",
            "owner_id": "781136206015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0817ed942dda6b7cd",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0817ed942dda6b7cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fca72559cbe4f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0921fd8e748839b43",
            "route_table_id": "rtb-0ecc4c5cdf4181091",
            "subnet_id": "subnet-01315f559d90d1d28"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.directory_service_subnet_1",
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:security-group/sg-054305e95edf99f6d",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054305e95edf99f6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "781136206015",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fca72559cbe4f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "directory_service_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:subnet/subnet-01315f559d90d1d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01315f559d90d1d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781136206015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06fca72559cbe4f34"
          },
          "dependencies": [
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "directory_service_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:subnet/subnet-024a59e4fba974cf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024a59e4fba974cf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781136206015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06fca72559cbe4f34"
          },
          "dependencies": [
            "aws_vpc.directory_service_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "directory_service_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:vpc/vpc-06fca72559cbe4f34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0355c45889ac3959e",
            "default_route_table_id": "rtb-0830463a20aa67668",
            "default_security_group_id": "sg-0d8fce69d8def7110",
            "dhcp_options_id": "dopt-004d165e304594a63",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fca72559cbe4f34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0830463a20aa67668",
            "owner_id": "781136206015"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:network-acl/acl-0b23f65aae0f6d074",
            "default_network_acl_id": "acl-0b23f65aae0f6d074",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b23f65aae0f6d074",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "781136206015",
            "subnet_ids": [
              "subnet-063f409c1e0a41bc6",
              "subnet-0653ebb5eda9551dd",
              "subnet-0b512ca7455ede2ef",
              "subnet-0dd3dd475a11969c6"
            ],
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:route-table/rtb-0d1422ef563fe9e61",
            "default_route_table_id": "rtb-0d1422ef563fe9e61",
            "id": "rtb-0d1422ef563fe9e61",
            "owner_id": "781136206015",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:security-group/sg-0cca17b0cb0a4848b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0cca17b0cb0a4848b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "781136206015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a3d025cca5b74b2",
            "association_id": "eipassoc-0fe5220166a0bc176",
            "domain": "vpc",
            "id": "eipalloc-04a3d025cca5b74b2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e72b08e9e696fee0",
            "private_dns": "ip-10-10-3-142.ec2.internal",
            "private_ip": "10.10.3.142",
            "public_dns": "ec2-54-81-162-11.compute-1.amazonaws.com",
            "public_ip": "54.81.162.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:internet-gateway/igw-08cb5938791a3f417",
            "id": "igw-08cb5938791a3f417",
            "owner_id": "781136206015",
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a3d025cca5b74b2",
            "association_id": "eipassoc-0fe5220166a0bc176",
            "connectivity_type": "public",
            "id": "nat-049a32e8374cc2fcf",
            "network_interface_id": "eni-0e72b08e9e696fee0",
            "private_ip": "10.10.3.142",
            "public_ip": "54.81.162.11",
            "subnet_id": "subnet-0b512ca7455ede2ef",
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e698a9ce0d6fc50d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-049a32e8374cc2fcf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e698a9ce0d6fc50d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08cb5938791a3f417",
            "id": "r-rtb-0b62ca7c0a02e45b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b62ca7c0a02e45b0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:route-table/rtb-0e698a9ce0d6fc50d",
            "id": "rtb-0e698a9ce0d6fc50d",
            "owner_id": "781136206015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-049a32e8374cc2fcf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:route-table/rtb-0b62ca7c0a02e45b0",
            "id": "rtb-0b62ca7c0a02e45b0",
            "owner_id": "781136206015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08cb5938791a3f417",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c91e051b67bfc779",
            "route_table_id": "rtb-0e698a9ce0d6fc50d",
            "subnet_id": "subnet-0dd3dd475a11969c6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035a93f3183452b66",
            "route_table_id": "rtb-0e698a9ce0d6fc50d",
            "subnet_id": "subnet-063f409c1e0a41bc6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e423efec0d522a73",
            "route_table_id": "rtb-0b62ca7c0a02e45b0",
            "subnet_id": "subnet-0b512ca7455ede2ef"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8e0ed0e276e7274",
            "route_table_id": "rtb-0b62ca7c0a02e45b0",
            "subnet_id": "subnet-0653ebb5eda9551dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:subnet/subnet-0dd3dd475a11969c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd3dd475a11969c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781136206015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:subnet/subnet-063f409c1e0a41bc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063f409c1e0a41bc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781136206015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:subnet/subnet-0b512ca7455ede2ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b512ca7455ede2ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781136206015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:subnet/subnet-0653ebb5eda9551dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0653ebb5eda9551dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781136206015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "vpc_id": "vpc-04be80fd1ae7b8311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:781136206015:vpc/vpc-04be80fd1ae7b8311",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b23f65aae0f6d074",
            "default_route_table_id": "rtb-0d1422ef563fe9e61",
            "default_security_group_id": "sg-0cca17b0cb0a4848b",
            "dhcp_options_id": "dopt-004d165e304594a63",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04be80fd1ae7b8311",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1422ef563fe9e61",
            "owner_id": "781136206015",
            "tags": {
              "Environment": "Development",
              "Name": "mitre-dev"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "mitre-dev"
            }
          }
        }
      ]
    }
  ]
}